--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.13.2",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemailer": "^6.6.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
