--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
